# z-fubao

./: README.md  package.json  pnpm-lock.yaml
client/: .env  .eslintrc.json  .gitignore  README.md  components.json  cspell.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  tailwind.config.ts  tailwind.designSystem.config.ts  tsconfig.json
client/src/: config.ts  main.tsx
client/src/app/: design-system.css  globals.scss  layout.tsx  page.tsx  reset.css
client/src/bitcoin/: index.ts  rpcClient.ts  wallet.ts
client/src/components/: ChargeModal.tsx  ConvertPanel.tsx  Footer.tsx  LockAndMintPanel.tsx  Nav.tsx  global.css  wrapImportant.tsx
client/src/connector/: base.ts  index.ts  injected.ts  muses.ts
client/src/context/: ChainContext.tsx
client/src/contexts/: BitcoinWalletProvider.tsx  SolanaWalletProvider.tsx  ZplClientProvider.tsx
client/src/hooks/: useDashboardData.ts
client/src/routes/: dashboard.tsx  deposit.tsx  earn.tsx  mint.tsx  root.tsx
client/src/stores/: persistentStore.ts  store.ts
client/src/types/: api.ts  chart.ts  misc.ts  network.ts  store.ts  transaction.ts  wallet.ts  zplClient.ts
client/src/utils/: axios.ts  chart.ts  constant.ts  event.ts  format.ts  interaction.ts  localStorage.ts  misc.ts  network.ts  notification.tsx
program/: Cargo.toml
program/stake/: Cargo.toml
program/z-fubao/: Cargo.toml
program/z-fubao-move/sources/: staking.move
program/z-fubao/src/: entrypoint.rs  instructions.rs  lib.rs  processor.rs  state.rs
program/z-fubao/tests/: test_z_fubao.rs
(+160 files in other folders)
