cargo-features = ["edition2024"]

[workspace]
members = [
    "z-fubao"
]
resolver = "3"

[workspace.package]
version = "1.0.0"
description = "ZFubao"
authors = ["ZFubao"]
edition = "2024"
repository = "https://github.com/kws1207/z-fubao"
license = "Apache-2.0"


[workspace.dependencies]
solana-program = "=2.1.15"
solana-sdk = "=2.1.15"
solana-program-test = "=2.1.15"
solana-client = "=2.1.15"
spl-token = "=7.0.0"
spl-associated-token-account = "=6.0.0"

borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
thiserror = "1"
tokio = { version = "=1.44.0", features = ["full"] }

lazy_static = "1.4.0"